--- a/p5/css practica 5.css
+++ b/p5/css practica 5.css
@@ -94,3 +94,28 @@
     color:#393e46;
     background:#393e46;
 }
+
+table{
+    margin: auto;
+}
+
+h2{
+    text-align: center;
+    font-size: 16px;
+}
+
+a{
+    text-decoration: none;
+    color: #393e46;
+    font-family: 'Quattrocento Sans', sans-serif;
+    background-color: white;
+    border: 2px solid;
+    border-color: white;
+    padding: 7px 100px;
+    border-radius: 10px;
+}
+
+a:hover{
+    background-color: #393e46;
+    color: white;
+}
